# gulliview_server

./: CMakeLists.txt  package.xml
gulliviewServer/: CMakeLists.txt  package.xml  server.launch
gulliviewServer/src/: errorCalc.py  errorCalc_test.py  gulliview_server.cpp  path.txt  rosErrorCalc.py  test.sh  testErrorCalc.py
msg/: Pos.msg
scripts/: error_calc.py  error_calc_node.py  gatherdata.py  gulliview_server.cpp  hard_path_splined.txt  hardpath.txt  hardpath.txt_splined_1000.0  path.txt  path.txt_splined_0.0  path.txt_splined_10000.0  path.txt_splined_5000.0  path_line.txt  path_measure.txt  path_measure.txt_splined_3000.0  path_old.txt  path_traCK_COLOR.txt
src/: errorCalc.py  errorCalc_test.py  gulliview_server.cpp  rosErrorCalc.py
